--- a/pages/checkout-empty.html
+++ b/pages/checkout-empty.html
@@ -59,14 +59,14 @@
                     <div class="checkout_table_blog overflowx-auto">
                         <div class="empty_bag_blog d-flex flex-column align-items-center">
                             <h5 class="empty_bag_title fw-bold text-center mb-4">Your Shopping bag is empty!</h5>
-                            <a href="./products.html" class="btn checkout__btn px-md-5 btn-danger btn-lg">Continue
+                            <a href="./products.html" class="btn checkout__btn px-md-5 red__btn btn-lg">Continue
                                 shopping</a>
                         </div>
                     </div>
                     <div class="checkout__footer between_center flex-wrap gap-2">
                         <h6 class="checkout_total_text fw-bold m-0">Total</h6>
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn checkout__btn checkout_pay_btn btn-danger btn-lg" disabled>Pay: €0.
+                            <button class="btn checkout__btn checkout_pay_btn red__btn btn-lg" disabled>Pay: €0.
                                 <span class="pay_btn_points">00</span></button>
                         </div>
                     </div>
