--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -61,7 +61,7 @@
                             <tbody>
                                 <tr>
                                     <th class="checkout_table_th fw-normal">C301-i programmable TOTP token</th>
-                                    <td>
+                                    <td align="right">
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
                                                 data-toggle="minus" id="checkout-minus">
@@ -75,13 +75,13 @@
                                             </button>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <div class="card__price position-static">
                                             <p class="card_product_price" id="product-price">€40.</p>
                                             <span class="card_price_point">00</span>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <button class="btn checkout_trash_btn btn__square white_to_red_btn">
                                             <i class="fa-regular fa-trash-can"></i>
                                         </button>
@@ -89,7 +89,7 @@
                                 </tr>
                                 <tr>
                                     <th class="checkout_table_th fw-normal">T2F2-NFC-Slim FIDO2 Security key</th>
-                                    <td>
+                                    <td align="right">
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
                                                 data-toggle="minus" id="checkout-minus">
@@ -103,13 +103,13 @@
                                             </button>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <div class="card__price position-static">
                                             <p class="card_product_price" id="product-price">€36.</p>
                                             <span class="card_price_point">00</span>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <button class="btn checkout_trash_btn btn__square white_to_red_btn">
                                             <i class="fa-regular fa-trash-can"></i>
                                         </button>
@@ -117,7 +117,7 @@
                                 </tr>
                                 <tr>
                                     <th class="checkout_table_th fw-normal">C202 classic TOTP token</th>
-                                    <td>
+                                    <td align="right">
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
                                                 data-toggle="minus" id="checkout-minus">
@@ -131,13 +131,13 @@
                                             </button>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <div class="card__price position-static">
                                             <p class="card_product_price" id="product-price">€36.</p>
                                             <span class="card_price_point">00</span>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <button class="btn checkout_trash_btn btn__square white_to_red_btn">
                                             <i class="fa-regular fa-trash-can"></i>
                                         </button>
@@ -145,7 +145,7 @@
                                 </tr>
                                 <tr>
                                     <th class="checkout_table_th fw-normal">USB Programmable TOTP Tokens</th>
-                                    <td>
+                                    <td align="right">
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
                                                 data-toggle="minus" id="checkout-minus">
@@ -159,13 +159,13 @@
                                             </button>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <div class="card__price position-static">
                                             <p class="card_product_price" id="product-price">€36.</p>
                                             <span class="card_price_point">00</span>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <button class="btn checkout_trash_btn btn__square white_to_red_btn">
                                             <i class="fa-regular fa-trash-can"></i>
                                         </button>
@@ -173,7 +173,7 @@
                                 </tr>
                                 <tr>
                                     <th class="checkout_table_th fw-normal">T2F2-NFC-Slim FIDO2 Security key</th>
-                                    <td>
+                                    <td align="right">
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
                                                 data-toggle="minus" id="checkout-minus">
@@ -187,13 +187,13 @@
                                             </button>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <div class="card__price position-static">
                                             <p class="card_product_price" id="product-price">€36.</p>
                                             <span class="card_price_point">00</span>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td align="right">
                                         <button class="btn checkout_trash_btn btn__square white_to_red_btn">
                                             <i class="fa-regular fa-trash-can"></i>
                                         </button>
@@ -206,9 +206,9 @@
                         <h6 class="checkout_total_text fw-bold m-0">Total</h6>
                         <div class="d-flex flex-wrap gap-2">
                             <a href="./products.html"
-                                class="btn checkout__btn px-md-5 btn-outline-danger btn-lg">Continue
+                                class="btn checkout__btn px-md-5 btn-lg">Continue
                                 shopping</a>
-                            <button class="btn checkout__btn checkout_pay_btn btn-danger btn-lg">Pay: €740.
+                            <button class="btn checkout__btn checkout_pay_btn red__btn btn-lg">Pay: €740.
                                 <span class="pay_btn_points">00</span></button>
                         </div>
                     </div>
