--- a/pages/tools.html
+++ b/pages/tools.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 Tools</title>
+    <title>Token2 Tools</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,16 +36,18 @@
         <div class="container my-5">
             <div class="row mt-lg-5 mt-3 pt-lg-5 pt-3">
                 <div class="col-12 text-white mb-lg-3">
-                    <h1 class="mb-4 col-lg-6 col-sm-12">Tools for hardware tokens and security keys</h1>
+                    <h1 class="mb-4 col-lg-6 col-sm-12 manrope">Tools for hardware tokens and security keys</h1>
                     <div class="row mb-4">
-                        <p class="lh-lg col-lg-6 col-12">We have solutions that can integrate with almost any system,
+                        <p class="lh-lg col-lg-6 col-12 open_sans">We have solutions that can integrate with almost any
+                            system,
                             below is the
                             list
                             of integration
                             guides with different systems published so far, and it is far from being exhaustive. Feel
                             free to contact us if you cannot find your desired product in the list below, we will check
                             the compatibility and provide instructions.</p>
-                        <p class="lh-lg col-lg-6 col-12">We have solutions that can integrate with almost any system,
+                        <p class="lh-lg col-lg-6 col-12 open_sans">We have solutions that can integrate with almost any
+                            system,
                             below is the
                             list
                             of integration
@@ -95,28 +97,28 @@
             <div class="row mb-lg-5 mb-5 mx-auto">
                 <div class="col-12 bg-white  rounded p-lg-4 p-3">
                     <div class="table-responsive">
-                        <table class="table" style="min-width:1000px;">
+                        <table class="table tools__table" style="min-width:1000px;">
                             <h4 class="fw-semibold">FIDO2 Keys</h4>
                             <thead>
-                                <tr class="text-muted">
+                                <tr class="tools_table_selects text-muted">
                                     <th>Models</th>
                                     <th>
-                                        <select class="form-select bg-secondary bg-opacity-25">
+                                        <select class="form-select bg-opacity-25">
                                             <option value="android" selected>Android</option>
                                         </select>
                                     </th>
                                     <th>
-                                        <select class="form-select bg-secondary bg-opacity-25">
+                                        <select class="form-select bg-opacity-25">
                                             <option value="windows" selected>Windows</option>
                                         </select>
                                     </th>
                                     <th>
-                                        <select class="form-select bg-secondary bg-opacity-25">
+                                        <select class="form-select bg-opacity-25">
                                             <option value="iphone" selected>Iphone</option>
                                         </select>
                                     </th>
                                     <th>
-                                        <select class="form-select bg-danger text-white">
+                                        <select class="form-select form_select_primary bg-danger text-white">
                                             <option value="python" selected>Cross-platform (Python)</option>
                                         </select>
                                     </th>
@@ -126,7 +128,7 @@
                                 <tr>
                                     <td>miniOTP-1, C105</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -135,7 +137,7 @@
                                 <tr>
                                     <td>miniOTP-1, C105</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -146,14 +148,14 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
                                 <tr>
                                     <td>C301, C302 </td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -163,7 +165,7 @@
                                     <td>C301-i, C302-i </td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -171,7 +173,7 @@
                                 <tr>
                                     <td>C301-i, C302-i </td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -183,14 +185,14 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>C301-i, C302-i </td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -208,14 +210,14 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
                                 <tr>
                                     <td>OTPC-P1, OTPC-P2</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -227,13 +229,13 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>miniOTP-2-i, miniOTP-3-i</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -245,13 +247,13 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>miniOTP-2-i, miniOTP-3-i</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -262,14 +264,14 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
                                 <tr>
                                     <td>OTPC-P1-i, OTPC-P2-i </td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -280,7 +282,7 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
@@ -289,14 +291,14 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
                                 <tr>
                                     <td>Molto-1</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -306,7 +308,7 @@
                                     <td>Molto-1</td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -314,7 +316,7 @@
                                 <tr>
                                     <td>Molto-1-i</td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -324,7 +326,7 @@
                                     <td>Molto-1-i</td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -335,7 +337,7 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -343,7 +345,7 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                 </tr>
@@ -351,7 +353,7 @@
                                     <td>Molto-2 </td>
                                     <td></td>
                                     <td>
-                                        <p class="btn btn-danger px-4 mb-2">Download</p>
+                                        <a href="#" class="btn btn-danger px-3">Download</a>
                                     </td>
                                     <td></td>
                                     <td></td>
@@ -363,7 +365,7 @@
             </div>
             <div class="row mb-lg-4 mb-3 mx-auto">
                 <div class="col-12 bg-blog">
-                    <p class="p-3">Important! Please make sure you use the correct application, as using a wrong app may
+                    <p class="p-3 open_sans fs-14">Important! Please make sure you use the correct application, as using a wrong app may
                         lock the device out. While this authentication is implemented in some models (Molto1 and Molto2
                         etc.), in some models, such as C301, OTPC* and miniOTP* cards, NFC access is left unrestricted
                         by
@@ -382,11 +384,11 @@
                 </div>
             </div>
             <div class="row mb-lg-5 mb-3">
-                <h3 class="mb-4">Prerequisites</h3>
+                <h3 class="tools_content_title mb-4">Prerequisites</h3>
                 <div class="col-lg-6 col-12 mb-3">
                     <div class="bg-white py-lg-4 px-lg-3 py-4 px-3 rounded" style="min-height: 260px;">
-                        <h4 class="mb-4">NFC Tokens</h4>
-                        <p>Android devices should be equipped with an NFC chip. iPhone apps are compatible with models
+                        <h4 class="tools_content_title mb-4">NFC Tokens</h4>
+                        <p class="tools_content_text">Android devices should be equipped with an NFC chip. iPhone apps are compatible with models
                             newer
                             than iPhone 7 and with iOS v13 or higher. Windows application will require an external USB
                             NFC
@@ -398,8 +400,8 @@
                 </div>
                 <div class="col-lg-6 col-12 mb-3">
                     <div class="bg-white py-lg-4 px-lg-3 py-4 px-3 rounded" style="min-height: 260px;">
-                        <h4 class="mb-3">USB Tokens</h4>
-                        <p>No additional device, driver nor any other installation is needed. USB cable is supplied
+                        <h4 class="tools_content_title mb-3">USB Tokens</h4>
+                        <p class="tools_content_text">No additional device, driver nor any other installation is needed. USB cable is supplied
                             (USB-A
                             to
                             micro-USB port), any standard USB cable can be used (with data support). For computers
@@ -411,7 +413,7 @@
             </div>
             <div class="row mb-lg-5 mb-5 mx-auto">
                 <div class="col-12 bg-blog">
-                    <p class="p-3"> Some devices (including some models of Android phones, such as Nexus and Pixels,
+                    <p class="p-3 fs-14"> Some devices (including some models of Android phones, such as Nexus and Pixels,
                         some
                         versions of ACR122 USB module) may have issues with NFC link stability, so please be patient
                         when
