--- a/pages/faq.html
+++ b/pages/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 FAQ</title>
+    <title>Token2 FAQ</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- styles -->
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/faq.css">
     <script src="../js/jquery.min.js"></script>
 </head>
 
@@ -51,7 +52,7 @@
                                     <div class="accordion-button bg-white" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapse0" aria-expanded="true" aria-controls="collapse0">
                                         <span class=" d-flex justify-content-start align-items-start flex-column">
-                                            <p class="fs-4 fw-semibold mb-3 text-dark">NFC Burner applications</p>
+                                            <p class="faq_card_title mb-3">NFC Burner applications</p>
                                             <p class="text-secondary">Find the answers to frequently asked questions
                                                 about
                                                 our
@@ -173,7 +174,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true"
                                             aria-controls="collapse1">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 How is my credit card data stored and processed on your website?
                                             </p>
                                         </div>
@@ -192,7 +193,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true"
                                             aria-controls="collapse2">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Can I use the programmable tokens with AWS or Fortnite 2FA?
                                             </p>
                                         </div>
@@ -215,7 +216,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="true"
                                             aria-controls="collapse3">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Which of your tokens support Azure Cloud MFA?
                                             </p>
                                         </div>
@@ -234,7 +235,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="true"
                                             aria-controls="collapse4">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Can your tokens be used with DUO?
                                             </p>
                                         </div>
@@ -253,7 +254,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="true"
                                             aria-controls="collapse5">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Do you ship to my country?
                                             </p>
                                         </div>
@@ -274,7 +275,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="true"
                                             aria-controls="collapse6">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Do I need to register on your website to proceed with my order?
                                             </p>
                                         </div>
@@ -293,7 +294,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="true"
                                             aria-controls="collapse7">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Can I get a free sample?
                                             </p>
                                         </div>
@@ -312,7 +313,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="true"
                                             aria-controls="collapse8">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Can I use hardware tokens to implement Active <br> Directory login with
                                                 <br>
                                                 two-factor authentication?
@@ -333,7 +334,7 @@
                                         <div class="accordion-button bg-white collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="true"
                                             aria-controls="collapse9">
-                                            <p class="fs-5 fw-semibold">
+                                            <p class="faq_card_title">
                                                 Can I get a discount?
                                             </p>
                                         </div>
@@ -359,7 +360,7 @@
                                     </div>
                                 </div>
                                 <div class="row float-end me-1">
-                                    <button type="submit" class="btn btn-light text-danger px-4">Send</button>
+                                    <button type="submit" class="btn btn-light text-danger px-5">Send</button>
                                 </div>
                             </div>
                         </div>
