--- a/pages/guides.html
+++ b/pages/guides.html
@@ -18,18 +18,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- styles -->
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/guides.css">
     <script src="../js/jquery.min.js"></script>
-    <style>
-        .form-control::-webkit-input-placeholder {
-            color: #fff;
-        }
-        .form-control::-moz-placeholder {
-            color: #fff;
-        }
-        .form-control::placeholder, .form-control {
-            color: #fff;
-        }
-    </style>
 </head>
 
 <body>
@@ -46,9 +36,10 @@
         <div class="container">
             <div class="row my-5">
                 <div class="col-12 text-white">
-                    <h1 class="mb-4">Integration guides</h1>
+                    <h1 class="mb-4 manrope fw-bolder">Integration guides</h1>
                     <div class="col-lg-5 col-md-10 col-12 mb-4">
-                        <p class="lh-lg">We have solutions that can integrate with almost any system, below is the list
+                        <p class="lh-lg open_sans">We have solutions that can integrate with almost any system, below is
+                            the list
                             of integration
                             guides with different systems published so far, and it is far from being exhaustive. Feel
                             free to contact us if you cannot find your desired product in the list below, we will check
@@ -57,7 +48,7 @@
                     <div class="col-lg-6 col-md-9 col-12 d-flex">
                         <input type="text" class="form-control contact__input w-75 bg-transparent text-white me-2"
                             placeholder="Write here">
-                        <button class="btn btn-light text-danger w-25 contact__btn h-auto">Search</button>
+                        <button class="btn btn-light text-danger w-25 contact__btn h-auto px-1 d-flex align-items-center justify-content-center">Search</button>
                     </div>
                 </div>
             </div>
@@ -68,17 +59,17 @@
             <div class="row mb-lg-5 mb-md-3 mx-auto">
                 <div class="col-12 mt-encriment bg-white rounded p-lg-4">
                     <div class="table-responsive-xxl">
-                        <table class="table table-hover" style="min-width: 1200px;">
+                        <table class="table guides__table table-hover" style="min-width: 1200px;">
                             <thead>
                                 <tr class="text-muted">
-                                    <th scope="col">Product</th>
-                                    <th scope="col">Integration guides and manuals</th>
-                                    <th scope="col" class="text-nowrap">Hardware compatible</th>
+                                    <th class="guides_table_th_title" scope="col">Product</th>
+                                    <th class="guides_table_th_title" scope="col">Integration guides and manuals</th>
+                                    <th class="guides_table_th_title" scope="col" class="text-nowrap">Hardware compatible</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Microsoft Office 365 / Azure MFA (with Azure AD Premium P1 or P2 license)</td>
+                                    <td class="guides_table_title">Microsoft Office 365 / Azure MFA (with Azure AD Premium P1 or P2 license)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                         <p class="btn btn-danger px-4 mb-2">FAQ</p>
@@ -87,11 +78,11 @@
                                         </p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Microsoft Office 365 / Azure MFA (without Azure AD Premium P1 or P2 license)
+                                    <td class="guides_table_title">Microsoft Office 365 / Azure MFA (without Azure AD Premium P1 or P2 license)
                                     </td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
@@ -101,137 +92,137 @@
                                         </p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Using programmable hardware tokens with Azure AD B2C (TOTP MFA method)</td>
+                                    <td class="guides_table_title">Using programmable hardware tokens with Azure AD B2C (TOTP MFA method)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Provisioning guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Microsoft Office 365 / Azure Passwordless
+                                    <td class="guides_table_title">Microsoft Office 365 / Azure Passwordless
                                         (Windows workstation login)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                         <p class="btn btn-danger px-4 mb-2">FAQ</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Microsoft Azure MFA on-premises server</td>
+                                    <td class="guides_table_title">Microsoft Azure MFA on-premises server</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Configuration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Google Account (security keys)</td>
+                                    <td class="guides_table_title">Google Account (security keys)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Nextcloud Passwordless with FIDO2 Keys</td>
+                                    <td class="guides_table_title">Nextcloud Passwordless with FIDO2 Keys</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Google Account (TOTP tokens)</td>
+                                    <td class="guides_table_title">Google Account (TOTP tokens)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Google Authenticator</td>
+                                    <td class="guides_table_title">Google Authenticator</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Migration toolset</p>
                                         <p class="btn btn-danger px-4 mb-2">Online Service</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>UserLock with programmable tokens
+                                    <td class="guides_table_title">UserLock with programmable tokens
                                         (Windows workstation/server login) </td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>UserLock with USB Security keys
+                                    <td class="guides_table_title">UserLock with USB Security keys
                                         (Windows workstation/server login) </td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Google Account (TOTP tokens)</td>
+                                    <td class="guides_table_title">Google Account (TOTP tokens)</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Google Authenticator</td>
+                                    <td class="guides_table_title">Google Authenticator</td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>UserLock with programmable tokens
+                                    <td class="guides_table_title">UserLock with programmable tokens
                                         (Windows workstation/server login) </td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>UserLock with USB Security keys
+                                    <td class="guides_table_title">UserLock with USB Security keys
                                         (Windows workstation/server login) </td>
                                     <td>
                                         <p class="btn btn-danger px-4 mb-2">Integration guide</p>
                                     </td>
                                     <td class="text-end">
-                                        <button class="btn btn-danger px-4">Download</button>
+                                        <a href="#" class="btn btn-danger px-4">Download</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td colspan="12" class="border-0">
                                         <div class="d-flex justify-content-end align-items-center">
-                                            <p class="me-3">Want a product to be listed here?</p>
+                                            <p class="me-3 guides_table_title">Want a product to be listed here?</p>
                                             <p class="btn btn-danger px-3 mb-2">Write us</p>
                                         </div>
                                     </td>
