--- a/pages/login.html
+++ b/pages/login.html
@@ -43,7 +43,7 @@
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./registry.html" style="width: max-content;" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger contact__btn">Sign Up</button>
+                        <button class="btn btn-light text-danger contact__btn px-5">Sign Up</button>
                     </a>
                 </div>
                 <form class="col-lg-6 offset-xl-1 col-12 my-4 my-lg-0">
