--- a/pages/registry.html
+++ b/pages/registry.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row mt-5 py-md-3 pb-4 text-white">
                 <form class="col-xl-5 col-lg-6 col-sm-12 mt-5 mt-lg-0">
-                    <h1 class="mb-lg-4 mb-3">Register</h1>
+                    <h1 class="mb-lg-4 mb-3 manrope fw-bolder">Register</h1>
                     <div class="row mb-lg-5 mb-4 mx-1">
                         <div class="col-12 bg-blog">
                             <p class="p-3">Only email addresses protected with 2FA is recommended to be used. Subsequent
@@ -97,12 +97,12 @@
                     </div>
                 </form>
                 <div class="col-lg-6 offset-xl-1 col-sm-12 d-flex flex-column">
-                    <h1 class="mb-lg-3">Already Registered?</h1>
-                    <h4 class="mb-lg-5 mb-4 fw-light">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                    <h1 class="mb-lg-3 manrope fw-bolder">Already Registered?</h1>
+                    <h4 class="register_content_text mb-lg-5 mb-4 fw-light">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./login.html" style="width: max-content;" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger contact__btn">Sign In</button>
+                        <button class="btn btn-light text-danger contact__btn px-5">Sign In</button>
                     </a>
                 </div>
             </div>
