fix:some changes

--- a/pages/processing_orders.html
+++ b/pages/processing_orders.html
@@ -45,7 +45,7 @@
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Prosessing Orders</h1>
-                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2" style="text-align: justify;">We have solutions that can integrate with almost any system, below
+                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2 fw-normal" style="text-align: justify;">We have solutions that can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
                         to contact us if you cannot find your desired product in the list below, we will check the
